fixing text-align

--- a/alumni-styles.css
+++ b/alumni-styles.css
@@ -131,7 +131,7 @@
 }
 
 #alumniBusinessDirectory p.ust-modal-first-name-last-name-degree {
-	text-align: center;
+	text-align: left;
 }
 
 #alumniBusinessDirectory p.ust-grid-record-business-name-display + p {
